# DocsQABackend

./: .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
utils/: offline_part.py  online_part.py  pipeline.py  service.py
