[project]
name = "project2aieng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "pypdf>=6.13.2",
]
